tests/typing/error-shadow/builtin-term-const.smt2
(set-logic QF_UF)
(declare-fun true () Bool)
(check-sat)
